<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Solazo Weather</string>
    <string name="action_settings">Settings</string>
    <!-- Main Activity -->
    <string name="approximating_weather">approximating your weather</string>

    <!-- Tab Activity -->
    <string name="abs_text_guess">GUESS</string>
    <string name="abs_text_submit">SUBMIT</string>
    <string name="abs_text_about">ABOUT</string>

    <!-- No Internet Error Message -->
    <string name="no_internet_message">Sorry, there\'s a problem connecting to the network.</string>

    <!-- About Activity -->
    <string name="about_app">Solazo is a weather app that helps to approximate the weather. That may seem unnecessary in some cases, and Solazo does not aim to replace your other weather apps. But if your located far away from a weather station, in what we call a \"Weather Station Desert\", then this app could be really useful. Just use your android phone to send us your coordinates and our app will approximate your temperature and humidity for your location.</string>
    <!-- Submit Activity -->
    <string name="button_submit">Submit</string>
    <string name="submit_hint_temperature">temperature</string>
    <string name="submit_hint_humidity">humidity</string>

    <!-- Guess Activity -->
    <string name="guess_placeholder_temperature">Temperature</string>
    <string name="guess_placeholder_humidity">Humidity</string>
    <string name="guess_label_closest_station">Closest Station</string>
    <string name="guess_label_miles_from_you">Miles From You</string>
    <string name="guess_current_location">Albany, NY</string>


    <string name="latitude_longitude">%1$.8f, %2$.8f</string>

    <string name="connection_error_code">Connection failure error code: %1$d</string>
    <string name="connection_error_disabled">Google Play services is disabled</string>
    <string name="connection_error_internal">An internal error occurred</string>
    <string name="connection_error_invalid">The version of Google Play services on this device is not authentic</string>
    <string name="connection_error_invalid_account">The specified account name is invalid</string>
    <string name="connection_error_license_check_failed">The app is not licensed to the user</string>
    <string name="connection_error_message">Connection failure error message: %1$s</string>
    <string name="connection_error_misconfigured">The application is misconfigured</string>
    <string name="connection_error_missing">Google Play services is missing</string>
    <string name="connection_error_needs_resolution">Additional resolution is required</string>
    <string name="connection_error_network">A network error occurred</string>
    <string name="connection_error_outdated">Google Play services is out of date</string>
    <string name="connection_error_sign_in_required">The user is not signed in</string>
    <string name="connection_error_unknown">An unknown error occurred</string>

    <!-- Messages -->
    <string name="connected">Client connected</string>
    <string name="connection_error_code_unknown">Unknown connection error code:  %1$d</string>
    <string name="connection_failed">Connection failed</string>
    <string name="disconnected">Client disconnected</string>
    <string name="get_address">Get Address</string>
    <string name="get_location">Get Location</string>
    <string name="illegal_argument_exception">
        Illegal arguments: Latitude %1$.8f Longitude %2$.8f
    </string>
    <string name="invalid_action">Invalid intent action %1$s</string>
    <string name="invalid_integer_id">Invalid integer request ID: %1$s</string>
    <string name="IO_Exception_getFromLocation">IO Exception in Geocoder.getFromLocation()</string>
    <string name="location_requested">Periodic updates requested</string>
    <string name="location_updated">Location updated</string>
    <string name="location_update_error">Location update failed</string>
    <string name="location_update_error_detail">
        Location update error. code %1$d message %2$s
    </string>
    <string name="location_update_missing_update">
        Location update error. No incoming location.
    </string>
    <string name="location_updates_stopped">Periodic updates stopped</string>
    <string name="log_new_location">New location: %1$s</string>
    <string name="no_address_found">No address found for location</string>
    <string name="no_connection">No connection: Cannot request location</string>
    <string name="no_geocoder_available">Cannot get address. No geocoder available.</string>
    <string name="no_location_available">Location not available</string>
    <string name="resolved">Error resolved. Please re-try operation.</string>
    <string name="no_resolution">Google Play services: unable to resolve connection error.</string>
    <string name="periodic_update_stop">Stopping periodic updates</string>
    <string name="play_services_available">Google Play services is available</string>
    <string name="request_location_updates_in_progress">
        Can\'t request location updates, previous request hasn\'t finished
    </string>
    <string name="start_updates">Start Updates</string>
    <string name="stop_updates">Stop Updates</string>
    <string name="unknown">--Unknown--</string>
    <string name="unknown_activity_request_code">
        Received an unknown activity request code %1$d in onActivityResult.
    </string>

</resources>
