<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".GuessActivity" >

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/guess_placeholder_temperature"
            android:id="@+id/guess_temperature"
            android:textSize="@dimen/h1"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/guess_placeholder_humidity"
            android:id="@+id/guess_humidity"
            android:layout_below="@+id/guess_temperature"
            android:layout_alignRight="@+id/guess_temperature"
            android:textSize="@dimen/h2"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/guess_label_closest_station"
            android:id="@+id/guess_station"
            android:textSize="@dimen/h2"
            android:layout_below="@+id/guess_humidity"
            android:layout_alignRight="@+id/guess_humidity"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/guess_label_miles_from_you"
            android:id="@+id/guess_distance"
            android:textSize="@dimen/h2"
            android:layout_below="@+id/guess_station"
            android:layout_alignRight="@+id/guess_humidity"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guess_current_location"
            android:id="@+id/guess_current_location"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"/>
</RelativeLayout>
