<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SubmitActivity" >

    <EditText
            android:id="@+id/editTemperature"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/submit_hint_temperature"
            android:inputType="numberSigned|numberDecimal"
            android:layout_alignParentTop="true"/>

    <EditText
            android:id="@+id/editHumidity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/submit_hint_humidity"
            android:inputType="numberDecimal"
            android:layout_below="@+id/editTemperature"/>

    <Button
            android:id="@+id/button_submit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_submit"
            android:layout_below="@+id/editHumidity"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guess_current_location"
            android:id="@+id/guess_current_location"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal|bottom"
            />

</RelativeLayout>
